# trading_tool

./: .gitignore
python/market_regime_scanner/: .env.example  .gitignore  README.md  pyproject.toml
python/market_regime_scanner/EA/: __init__.py
python/market_regime_scanner/EA/docs/: Backtest_Guide.md  README.md  (+1 more)
python/market_regime_scanner/analytic/: __init__.py
python/market_regime_scanner/data_providers/: __init__.py  base.py  mt5_data_provider.py  parquet_data_provider.py  unified_provider.py
python/market_regime_scanner/docs/: api_list.md  convergence_algorithm.md  macro_system_normalized_report.txt
python/market_regime_scanner/infra/: mt5.py  parquet_manager.py  s3_storage.py  settings.yaml  settings_loader.py  signal_diff.py  signal_logger.py
python/market_regime_scanner/markets/: README.md  cli.py  daily_scan.py  manager.py  pnl_tracker.py  registry.py  reporting.py  sync.py
python/market_regime_scanner/scripts/: observer.py  topdown_result.py
python/market_regime_scanner/tests/: conftest.py  test_parquet_provider.py  test_registry.py  test_scanner.py  test_signal_logger.py  test_smoke.py  visual_verify_xauusd.py
python/market_regime_scanner/universe/: README.md  __init__.py  backtester.py  cli.py  config.py  pre_screener.py  screener.py  watchlist.json  watchlist.py
python/market_regime_scanner/viz/: __init__.py  dashboard_visualizer.py  generate_html_report.py  generate_normalized_report.py  heatmap_generator.py  tpo_visualizer.py  visualizer.py
python/market_regime_scanner/workflow/: __init__.py  list_symbols.py  pipeline.py
(+177 files in other folders)
