[project]
name = "market-regime-scanner"
version = "0.1.0"
description = "Multi-timeframe market regime scanner with TPO, order-block & liquidity analysis"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pyarrow>=14.0",
    "polars>=0.20",
    "MetaTrader5>=5.0",
    "plotly>=5.0",
    "PyYAML>=6.0",
    "vnstock>=3.0",
    "ccxt>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
topdown = "scripts.mt5.observer:run"
review = "scripts.mt5.review_cli:main"
daily-scan = "scripts.daily_scan:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "analytic*", "infra*", "workflow*", "markets*", "viz*", "scripts*", "data_providers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_functions = "test_*"
